--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,11 +1,20 @@
+.navbar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: #fff;
+  border-top: 1px solid #e0e0e0;
+  box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
+}
+
 .navbar__list {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 16px 24px;
-  background-color: #fff;
-  height: 48px;
-  border-bottom: 1px solid #e0e0e0;
+  padding: 5px 24px;
+  height: 25px; /* Adjusted height for better spacing */
 }
 
 .navbar__list li {
@@ -21,8 +30,10 @@
 }
 
 .navbar__list-items div > span {
+  font-size: 12px;
   font-weight: 300;
 }
+
 .navlink {
   text-decoration: none;
   color: black;
