--- a/src/pages/PropertyDetails.css
+++ b/src/pages/PropertyDetails.css
@@ -1,6 +1,6 @@
 .hotel-details__container {
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   padding: 0 15px;
+  margin-bottom: 100px;
 }
 .hotel-card__image-container {
   position: relative;
@@ -100,4 +100,57 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+/* static amenities */
+.property-amenities {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.property-amenities__nearby {
+  display: flex;
+  gap: 8px;
+}
+
+.property-amenities__item {
+  background-color: #f8f9fa;
+  border-radius: 20px;
+  padding: 8px 16px;
+  font-size: 14px;
+  color: #2e2e2e;
+  font-weight: 500;
+}
+
+.property-amenities__title {
+  font-size: 18px;
+  color: #2e2e2e;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.property-amenities__types {
+  display: flex;
+  gap: 12px;
+}
+
+.property-amenities__type {
+  padding: 8px 20px;
+  font-size: 14px;
+  color: #2e2e2e;
+  background-color: #f8f9fa;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.property-amenities__type--selected {
+  background-color: #294a5e;
+  color: #fff;
+}
+
+.property-amenities__type:hover {
+  background-color: #294a5e;
 }
