--- a/src/pages/PropertyDetails.css
+++ b/src/pages/PropertyDetails.css
@@ -1,36 +1,22 @@
 .hotel-details__container {
   padding: 0 15px;
   margin-bottom: 100px;
+  width: 100%;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
 }
-.hotel-card__image-container {
-  position: relative;
+.hotel-details__image-dimensions {
+  display: flex;
   height: 600px;
   width: 100%;
   border-radius: 8px;
   overflow: hidden;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
 }
 
-.hotel-card__slider {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.hotel-card__image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
-}
-
-.hotel-card__image--active {
-  opacity: 1;
-  z-index: 1;
-}
 /* Base block styling */
 .hotel-details {
   padding: 10px 15px;
@@ -102,19 +88,19 @@
   justify-content: center;
 }
 /* static amenities */
-.property-amenities {
+.hotel-amenities {
   display: flex;
   flex-direction: column;
   gap: 10px;
   margin-top: 20px;
 }
 
-.property-amenities__nearby {
+.hotel-amenities__nearby {
   display: flex;
   gap: 8px;
 }
 
-.property-amenities__item {
+.hotel-amenities__item {
   background-color: #f8f9fa;
   border-radius: 20px;
   padding: 8px 16px;
@@ -123,19 +109,19 @@
   font-weight: 500;
 }
 
-.property-amenities__title {
+.hotel-amenities__title {
   font-size: 18px;
   color: #2e2e2e;
   font-weight: bold;
   margin-bottom: 8px;
 }
 
-.property-amenities__types {
+.hotel-amenities__types {
   display: flex;
   gap: 12px;
 }
 
-.property-amenities__type {
+.hotel-amenities__type {
   padding: 8px 20px;
   font-size: 14px;
   color: #2e2e2e;
@@ -146,11 +132,11 @@
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.property-amenities__type--selected {
+.hotel-amenities__type--selected {
   background-color: #294a5e;
   color: #fff;
 }
 
-.property-amenities__type:hover {
+.hotel-amenities__type:hover {
   background-color: #294a5e;
 }
