--- a/src/components/ImageSlider.css
+++ b/src/components/ImageSlider.css
@@ -2,7 +2,10 @@
   position: relative;
   height: var(--slider-height, 100%);
   width: 100%;
-  border-radius: 15px;
+  --border-radius: 15px;
+  border-radius: var(--border-radius);
+  border-top-left-radius: var(--top-border-radius, var(--border-radius));
+  border-top-right-radius: var(--top-border-radius, var(--border-radius));
   overflow: hidden;
   margin-top: 10px;
 }
